<!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<resources>
  <string name="server_error_message">서버에 문제가 발생했어요. 잠시 후 다시 시도해주세요.</string>
  <string name="network_error_message">네트워크 연결을 확인해주세요.</string>
  <string name="update_cafe">정보 수정 제안</string>
  <string name="cancel">취소</string>
  <string name="deletion">삭제</string>
  <string name="next">다음</string>
  <string name="ask_options">어떤 의견이 있으신가요?</string>
  <string name="ask_options_sub">주신 의견은 한글자도 빼놓지 않고 꼼꼼히 읽어볼게요.</string>
  <string name="request_correction_of_info">정보 수정 요청하기</string>
  <string name="sujest_cafe">카페 제안하기</string>
  <string name="cafe">카페</string>
  <string name="cafe_sub">휴게음식점/일반음식점</string>
  <string name="study_cafe">스터디 카페</string>
  <string name="study_cafe_sub">공간임대업/휴게음식점</string>
  <string name="study_room">스터디룸</string>
  <string name="study_room_sub">공간임대업</string>
  <string name="ask_cafe_categories">어떤 카테고리로 등록할까요?</string>
  <string name="ask_info_categories">어떤 것을 개선하고 싶으세요?</string>
  <string name="info">정보</string>
  <string name="info_sub">카페명, 주소, 추가 정보</string>
  <string name="menu">메뉴</string>
  <string name="menu_sub">메뉴명, 메뉴 가격</string>
  <string name="input_cafe_name">카페 이름을 입력해주세요.</string>
  <string name="input_cafe_name_hint">매장 이름</string>
  <string name="input_cafe_address">카페 주소를 입력해주세요.</string>
  <string name="input_cafe_address_sub">매장 주소를 입력하면 매장 정보 제공 및 노출에 동의하는 것으로 간주합니다.</string>
  <string name="input_cafe_address_hint">매장 주소</string>
  <string name="ic_register_cafe_complete">ic_register_cafe_complete</string>
  <string name="register_cafe_complete_title">카페 등록 신청을\n완료 했어요.</string>
  <string name="update_menu_complete_title">정보 수정을 완료했어요.</string>
  <string name="register_cafe_complete_subtitle">심사 후에 카페가 확인되면 지도에 등록할게요.</string>
  <string name="update_menu_complete_subtitle">이끔을 개선하는데 도움을 주셔서 감사합니다.</string>
  <string name="complete">완료</string>
  <string name="input_corrections">수정하려는 내용을 입력해주세요.</string>
  <string name="input_cafe_info_hint">30m</string>
  <string name="input_cafe_info_count_hint">5</string>
  <string name="input_cafe_info_business_hours_hint">매일 07:00 ~ 20:00</string>
  <string name="input_cafe_info_ox_hint">O</string>
  <string name="input_cafe_info_parking_hint">기본 / 기본 1시간 / 시간당 5,000원</string>
  <string name="input_cafe_info_restroom_hint">건물 2층, 공용 화장실</string>
  <string name="input_cafe_info_charging_hint">카운터에 문의</string>
  <string name="input_cafe_info_instagram_url_hint">https://www.instagram.com/~</string>
  <string name="input_cafe_info_website_url_hint">https://www.cafename.com/~</string>
  <string name="input_cafe_info_blog_url_hint">https://blog.naver.com/~</string>
  <string name="input_cafe_info_phone_hint">010–1234–5678</string>
  <string name="description_cafe_area">면적(㎡)</string>
  <string name="description_cafe_meeting_room">회의실(개)</string>
  <string name="description_cafe_multi_seat">다인석(개)</string>
  <string name="description_cafe_single_seat">1인석(개)</string>
  <string name="description_cafe_business_hours">영업시간</string>
  <string name="input_parking">주차</string>
  <string name="input_exists_smoking_area">흡연(O/X)</string>
  <string name="input_exists_wifi">와이파이(O/X)</string>
  <string name="input_exists_outlet">콘센트(O/X)</string>
  <string name="input_rest_room">화장실</string>
  <string name="input_mobile_charging">모바일 충전</string>
  <string name="input_instagram_uri">인스타그램</string>
  <string name="input_website_uri">웹사이트</string>
  <string name="input_blog_uri">블로그</string>
  <string name="input_phone">휴대폰</string>
  <string name="input_cafe_menu">메뉴</string>
  <string name="input_cafe_menu_hint">초콜릿 케이크</string>
  <string name="input_cafe_menu_price">가격</string>
  <string name="input_cafe_menu_price_hint">6,800</string>
  <string name="input_won">₩</string>
  <string name="edit">수정하기</string>
  <string name="delete">삭제하기</string>
  <string name="ic_menu_gray400_24">ic_menu_gray400_24</string>
  <string name="ic_edit_outlined_20">ic_edit_outlined_20</string>
  <string name="ic_trash_20">ic_trash_20</string>
  <string name="guide_message">정보를 입력해주세요!</string>
  <string name="ask_deletion">삭제하시겠어요?</string>
</resources>