<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/tb_select_input_cafe_address"
    style="@style/Widget.Eggeum.Toolbar.WithArrow"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:elevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      style="@style/Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/update_cafe"
      android:textColor="@color/gray_900" />

    <TextView
      style="@style/Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginEnd="16dp"
      android:text="@string/cancel"
      android:textColor="@color/gray_300" />

  </com.google.android.material.appbar.MaterialToolbar>

  <ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="24dp"
    android:fillViewport="true"
    android:layout_marginHorizontal="16dp"
    app:layout_constraintBottom_toBottomOf="@id/line_input_cafe_address"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tb_select_input_cafe_address">


    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_input_cafe_address"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
          android:id="@+id/tv_input_cafe_address"
          style="@style/H3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/input_cafe_address"
          android:textColor="@color/gray_900"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/tv_input_cafe_name_sub"
          style="@style/TextMRegular"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/input_cafe_address_sub"
          android:textColor="@color/gray_400"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tv_input_cafe_address"
          />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_blank"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_input_cafe_address"
        app:layout_constraintBottom_toTopOf="@id/til_input_cafe_address"/>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_input_cafe_address"
        style="@style/Widget.Eggeum.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@drawable/selector_box_stroke_color_gray_200"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:layout_constraintTop_toBottomOf="@id/cl_blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/tiet_input_cafe_address"
          style="@style/Widget.Eggeum.TextInputEditText.OutlinedBox"
          android:ellipsize="end"
          android:hint="@string/input_cafe_address_hint"
          android:inputType="text"
          android:maxLines="1" />

      </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>

  <View
    android:id="@+id/line_input_cafe_address"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:layout_marginBottom="16dp"
    android:background="@color/gray_200"
    app:layout_constraintBottom_toTopOf="@id/btn_next"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/btn_next"
    style="@style/Widget.Eggeum.Button"
    android:layout_width="0dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    android:text="@string/next"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>