<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/tb_select_input_cafe_menu"
    style="@style/Widget.Eggeum.Toolbar.WithArrow"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:elevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      style="@style/Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/update_cafe"
      android:textColor="@color/gray_900" />

    <TextView
      style="@style/Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginEnd="16dp"
      android:text="@string/cancel"
      android:textColor="@color/gray_300" />

  </com.google.android.material.appbar.MaterialToolbar>

  <TextView
    android:id="@+id/tv_input_cafe_menu"
    style="@style/H3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/input_corrections"
    android:textColor="@color/gray_900"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/tb_select_input_cafe_menu" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_cafe_menu_list"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_input_cafe_menu"
    app:layout_constraintBottom_toTopOf="@+id/line_input_cafe_menu"
    android:layout_marginTop="24dp"
    android:layout_marginHorizontal="16dp"
    tools:listitem="@layout/item_cafe_menu"/>

    <View
      android:id="@+id/line_input_cafe_menu"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginBottom="16dp"
      android:background="@color/gray_200"
      app:layout_constraintBottom_toTopOf="@id/btn_next"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <Button
      android:id="@+id/btn_next"
      style="@style/Widget.Eggeum.Button"
      android:layout_width="0dp"
      android:layout_marginHorizontal="16dp"
      android:layout_marginBottom="16dp"
      android:text="@string/next"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>