<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:layout_marginHorizontal="40dp">

  <TextView
    android:id="@+id/tv_delete_cafe_menu"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/ask_deletion"
    android:textColor="@color/black"
    style="@style/H6"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="24dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/cl_cancel_and_delete"
    android:gravity="center"
    />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_cancel_and_delete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_delete_cafe_menu"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="16dp"
    >
    <Button
      android:id="@+id/btn_cancel_cafe_menu"
      style="@style/Widget.Eggeum.Button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/cancel"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/btn_delete_cafe_menu"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginEnd="8dp"
      android:backgroundTint="@color/gray_300"
      />

    <Button
      android:id="@+id/btn_delete_cafe_menu"
      style="@style/Widget.Eggeum.Button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/deletion"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn_cancel_cafe_menu"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>